--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.5.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "nuxt": "^3.2.3",
