--- a/src/content/en/flight_types.yaml
+++ b/src/content/en/flight_types.yaml
@@ -18,7 +18,7 @@ items:
     content: |
       Manage your vertiports and aircraft with our one-stop-shop interface. Register, group, delegate, and maintain assets with ease.
       Elevate your business with configurable pricing models and detailed analytics.
-  - tag: Compliant
+  - tag: compliant
     icon: Icon-vtolcargo.svg
     title: U-space <span>Integration</span>
     content: |
