--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify/vue": "^5.0.0",
     "@nuxt/content": "^2.5.2",
     "@nuxt/kit": "3.10.3",
     "@popperjs/core": "^2.11.6",
